--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
   http: ^0.13.5
+  flutter_staggered_grid_view: ^0.6.2
+  flutter_easyloading: ^3.0.5
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
