--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   flutter_easyloading: ^3.0.5
   flutter_spinkit: ^5.1.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
